--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "git-semver-tags": "^1.0.0",
     "lodash": "^3.9.3",
     "meow": "^3.3.0",
+    "promise-to-callback": "^1.0.0",
     "q": "^1.4.1",
+    "read-pkg": "^1.0.0",
+    "read-pkg-up": "^1.0.1",
     "semver": "^5.0.1",
     "tempfile": "^1.1.1",
     "through2": "^2.0.0"
